--- a/WorkingWithLists.ipynb
+++ b/WorkingWithLists.ipynb
@@ -139,20 +139,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 9, 16, 25, 36, 49]\n"
+      "[4, 9, 16, 25, 36, 49, 64, 81, 4, 9, 16, 25, 36, 49, 64, 81, 4, 9, 16, 25, 36, 49, 64, 81]\n"
      ]
     }
    ],
    "source": [
-    "list2 = [i*i for i in range(2,8)] # list comprehension\n",
+    "list2 = [i*i for i in range(2,10)] # list comprehension\n",
+    "list2 *= 3\n",
     "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2.count(36)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list3 = [i**3 for i in range(2,8)]\n",
+    "list3 += list2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 27, 64, 125, 216, 343, 4, 9, 16, 25, 36, 49, 64, 81, 4, 9, 16, 25, 36, 49, 64, 81, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kleiner 50: 20\n",
+      "Größer gleich 50: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "klein = 0\n",
+    "groß = 0\n",
+    "for i in list3:\n",
+    "    if i < 50:\n",
+    "        klein += 1\n",
+    "    else:\n",
+    "        groß += 1\n",
+    "print(\"Kleiner 50: \" + str(klein))\n",
+    "print(\"Größer gleich 50: \" + str(groß))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "33 in list3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "25 in list3"
    ]
   },
   {
